[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-library-explorer"
version = "0.1.0"
description = "Cognitive Library Explorer (CLE) - minimal skeleton"
requires-python = ">=3.9"
dependencies = ["pandas>=1.5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
